--- a/TheNextCar/TheNextCar.csproj
+++ b/TheNextCar/TheNextCar.csproj
@@ -8,4 +8,14 @@
     <StartupObject />
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="assets\navigation.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="assets\navigation.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
